Now, we can see the posts :3 i did it by my own :P

--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -8,7 +8,7 @@
     </li>
     <li>
       <!--En vez de utilizar a hrf, utilizamos router link para que el usuario se mueva en diferentes rutas-->
-      <a routerLink="post">
+      <a routerLink="posts">
         <i class="material-icons">message</i>
       </a>
     </li>
