--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -1,3 +1,12 @@
-<p>
-  posts works!
-</p>
+<h1>Posts</h1>
+
+<ul>
+  <li *ngFor="let post of posts$">
+    <a>{{ post.userId }}</a>
+
+    <ul>
+      <li>Title: {{ post.title }}</li>
+      <li>{{ post.body }}</li>
+    </ul>
+  </li>
+</ul>
