--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,14 +1,12 @@
 <nav>
   <ul>
     <li>
-      <!--En vez de utilizar a hrf, utilizamos router link para que el usuario se mueva en diferentes rutas-->
-      <a routerLink="">
+      <a routerLink="" [class.activated]="currentUrl == '/'">
         <i class="material-icons">supervised_user_circle</i>
       </a>
     </li>
     <li>
-      <!--En vez de utilizar a hrf, utilizamos router link para que el usuario se mueva en diferentes rutas-->
-      <a routerLink="posts">
+      <a routerLink="posts" [class.activated]="currentUrl == '/posts'">
         <i class="material-icons">message</i>
       </a>
     </li>
