Well, with help, i fixed it, but i don´t really get why, we changed _.url for this.router.url because the firts one was give to me a undefined value ._.

--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -16,7 +16,7 @@ nav {
             }
 
             .activated {
-                background-color: #00a8ff;
+                background-color: #00ff9d;
             }
         }
     }
